<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/margin_big"
    android:paddingEnd="@dimen/margin_big">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_small">

        <ImageView
            android:layout_width="@dimen/image_small"
            android:layout_height="@dimen/image_small"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_profile" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_tiny">

            <EditText
                android:id="@+id/edittext_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_small">

        <ImageView
            android:layout_width="@dimen/image_small"
            android:layout_height="@dimen/image_small"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_phone" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_tiny">

            <EditText
                android:id="@+id/edittext_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_small">

        <ImageView
            android:layout_width="@dimen/image_small"
            android:layout_height="@dimen/image_small"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputlayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_tiny">

            <EditText
                android:id="@+id/edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</LinearLayout>